# messenger_core

./: Cargo.toml
src/: app_state.rs  main.rs  routes.rs
src/api/: users.rs
src/db/: mod.rs  postgesql_session.rs  postgres.rs  redis_session.rs  repository.rs
src/handlers/: auth.rs  mod.rs  register.rs
src/models/: user.rs
src/services/: auth.rs
