[package]
name = "messenger_core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
axum = "0.8.8"
diesel = "2.3.5"
features = "0.10.0"
postgres = "0.19.12"
redis = { version = "1.0.1", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.15"
